--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,49 @@
-.App {
-  text-align: center;
+.container{
+    display: flex;
+    width: 100%;
+    flex-direction: column;
+    
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.task-header{
+}
+.task-content{
+}
+.title{
+    font-size: 24px;
+    box-sizing: border-box;
+    font-weight: 700;
+}
+.taskbtn {
+    width: 100%;
+    border-radius: 6px;
+    font-weight: 600;
+    cursor: pointer;
+    font-size: 18px;
+    text-align: start;
+    
+}
+.taskbtn.add{
+    color: #fff;
+    background-color:#171c21 ;
+    height: 40px;
+
+}
+.taskbtn.task-item{
+    display: flex;
+    height: 50px;
+    background-color: #eef2f6;
+    justify-content:space-between
+}
+.taskbtn_left{
+    display: flex;
+    align-items: center;
+}
+.taskbtn_right{
+    display: flex;
+    align-items: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.taskbtn.add:hover {
+  background-color: #364049;
 }
