--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
     
 }
 .task-header{
+    padding-bottom: 10px;
 }
 .task-content{
 }
@@ -79,3 +80,30 @@ input[type="checkbox"]:checked {
 
     padding-right: 50px;
 }
+.taskbtn.task-item.subtask-item {
+    height: 40px;
+    background-color: rgb(228, 202, 227);
+    
+}
+.subtask_button{
+    background-color: rgb(228, 202, 227);
+}
+.add_subtask_button{
+    height: 25px;
+    width: 250px;
+    margin-top: 5px;
+    background-color: #c5d3df;
+    border-radius: 6px;
+    color: black;
+    border: none;
+
+}
+.task-content.subtask-content{
+    margin-bottom: 20px;
+    margin-left: 5px;
+}
+.title_done{text-decoration: line-through; color: #616669;}
+.button_icon{margin-right: 15px;}
+.today {color: blue;}
+.after {color: green;}
+.before{color: red}
